testsuite/tests/grammar/invalid_token_node/derive_field.lkt
import common

@abstract
class BaseExample: FooNode implements TokenNode {
}

class Example: BaseExample {
    @parse_field
    f: Identifier
}
